<resources>
    <string name="app_name">Calcul2Surface</string>
    <string name="calcul_de_surface">Calcul de surface</string>
    <string name="rayon">Rayon en cm</string>
    <string name="surface_d_un_disque">Surface d\'un disque</string>
    <string name="volume_d_une_boule">Volume d\'une boule</string>
    <string name="aire_d_un_disque">Aire d\'un disque</string>
    <string name="resultat">Resultat :</string>
</resources>